Стилизует подвал сайта для всех экранов
- Компонент company-phone переименован в link-icon для переиспользования
- Подвал сделан на гридах

--- a/source/sass/abstracts/_colors.scss
+++ b/source/sass/abstracts/_colors.scss
@@ -2,16 +2,24 @@ $black: hsl(0, 0%, 0%);
 $bittersweet: hsl(7, 99%, 70%);
 $jaffa: hsl(18, 86%, 62%);
 $woodsmoke: hsl(220, 7%, 8%);
+$woodsmoke-half: hsl(220, 7%, 8%, 0.5);
 $charad: hsl(234, 18%, 21%);
 $abbey: hsl(228, 3%, 29%);
 $soft-peach: hsl(0, 27%, 98%);
 $white: hsl(0, 0%, 100%);
+$mischka: hsl(225, 11%, 86%);
 
 $site-navigation-link: $woodsmoke;
 $site-navigation-link-hover: $bittersweet;
-$company-phone: $woodsmoke;
-$company-phone-hover: $bittersweet;
+$link-icon: $woodsmoke;
+$link-icon-hover: $bittersweet;
 $menu-button-bg: $bittersweet;
 $menu-button-open-bg: $white;
 $site-navigation-link-before-desktop: $abbey;
 $site-navigation-item-bg: $soft-peach;
+$main-footer-title: $woodsmoke;
+$main-footer-list-item: $woodsmoke-half;
+$main-footer-paragraph: $woodsmoke-half;
+$link-icon-secondary-color: $bittersweet;
+$link-icon-secondary-svg-stroke: $mischka;
+$footer-separator-color: $mischka;
