--- a/source/sass/layout/_main-header.scss
+++ b/source/sass/layout/_main-header.scss
@@ -18,7 +18,7 @@
   margin-left: auto;
 }
 
-.main-header__company-phone {
+.main-header__link-icon {
   margin-right: 3px;
 }
 
@@ -70,7 +70,7 @@
     flex-grow: 1;
   }
 
-  .main-header__company-phone {
+  .main-header__link-icon {
     display: none;
   }
 
