Добавляет главный блок
- Исправляет отступы в шапке для pixel-perfect.
- Изменяет vieport до планшетных на 767px.
- Добавляет картинки для главного блока.
- Добавляет компонент "кнопка".

--- a/source/sass/abstracts/_colors.scss
+++ b/source/sass/abstracts/_colors.scss
@@ -23,3 +23,4 @@ $main-footer-paragraph: $woodsmoke-half;
 $link-icon-secondary-color: $bittersweet;
 $link-icon-secondary-svg-stroke: $mischka;
 $footer-separator-color: $mischka;
+$button-bg-color: $bittersweet;
