--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -12,9 +12,11 @@
 @import "./components/link-icon";
 @import "./components/menu-button";
 @import "./components/logo";
+@import "./components/button";
 
 // Layout
 @import "./layout/main-header";
+@import "./layout/site-banner";
 @import "./layout//main-footer";
 
 //State
