--- a/source/sass/base/_typography.scss
+++ b/source/sass/base/_typography.scss
@@ -10,6 +10,15 @@
 @font-face {
   font-family: "Montserrat";
   src: local("Montserrat"),
+    url("../fonts/Montserrat-Medium.woff2") format("woff2"),
+    url("../fonts/Montserrat-Medium.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Montserrat";
+  src: local("Montserrat"),
     url("../fonts/Montserrat-SemiBold.woff2") format("woff2"),
     url("../fonts/Montserrat-SemiBold.woff") format("woff");
   font-weight: 600;
