Добавит блок с карточками стран
- Исправляет опечатку из-за которой не верно отображались стили на мобильном для главного блока.
- Линтит стили предыдущего коммита.
- Изменяет автоматизацию для генерирования webp.
- Для сетки карточек товара использует flex с gap.
На планшетных и мобильных эту опцию заменяет margin
для работы в iOS.

--- a/source/sass/abstracts/_colors.scss
+++ b/source/sass/abstracts/_colors.scss
@@ -3,11 +3,13 @@ $bittersweet: hsl(7, 99%, 70%);
 $jaffa: hsl(18, 86%, 62%);
 $woodsmoke: hsl(220, 7%, 8%);
 $woodsmoke-half: hsl(220, 7%, 8%, 0.5);
+$woodsmoke-60: hsla(234, 8%, 9%, 0.6);
 $charad: hsl(234, 18%, 21%);
 $abbey: hsl(228, 3%, 29%);
 $soft-peach: hsl(0, 27%, 98%);
 $white: hsl(0, 0%, 100%);
 $mischka: hsl(225, 11%, 86%);
+$white-70: hsla(0, 0%, 100%, 0.7);
 
 $site-navigation-link: $woodsmoke;
 $site-navigation-link-hover: $bittersweet;
@@ -24,3 +26,9 @@ $link-icon-secondary-color: $bittersweet;
 $link-icon-secondary-svg-stroke: $mischka;
 $footer-separator-color: $mischka;
 $button-bg-color: $bittersweet;
+$site-banner-text-dark: $charad;
+$button-transparent-border-color: $white-70;
+$places-to-visit-title-color: $charad;
+$separator: $bittersweet;
+$country-card-title-color: $charad;
+$country-card-backdrop-bg-color: $woodsmoke-60;
