--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,11 +13,13 @@
 @import "./components/menu-button";
 @import "./components/logo";
 @import "./components/button";
+@import "./components/country-card";
 
 // Layout
 @import "./layout/main-header";
 @import "./layout/site-banner";
 @import "./layout//main-footer";
+@import "./layout/places-to-visit";
 
 //State
 @import "./state/no-js.scss";
