Создает отдельные компоненты heading и paragraph
- Испаравляет код разметки в соответсвии с новыми компонентами.
- Фиксит margin для карточек на мобильной версии.
- Изменяет имя переменной цвета в соотв. с новыми компонентами.

--- a/source/sass/abstracts/_colors.scss
+++ b/source/sass/abstracts/_colors.scss
@@ -28,7 +28,7 @@ $footer-separator-color: $mischka;
 $button-bg-color: $bittersweet;
 $site-banner-text-dark: $charad;
 $button-transparent-border-color: $white-70;
-$places-to-visit-title-color: $charad;
+$heading-color: $charad;
 $separator: $bittersweet;
 $country-card-title-color: $charad;
 $country-card-backdrop-bg-color: $woodsmoke-60;
