--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -14,11 +14,13 @@
 @import "./components/logo";
 @import "./components/button";
 @import "./components/country-card";
+@import "./components/heading";
+@import "./components/paragraph";
 
 // Layout
 @import "./layout/main-header";
 @import "./layout/site-banner";
-@import "./layout//main-footer";
+@import "./layout/main-footer";
 @import "./layout/places-to-visit";
 
 //State
