Добавляет блок с табами стран
- Картинка стран сделана как контентное изображание.
- Добавляет горизонтальный скролл ниже десктопа.

--- a/source/sass/components/_paragraph.scss
+++ b/source/sass/components/_paragraph.scss
@@ -18,6 +18,11 @@
   }
 }
 
+.paragraph--small {
+  font-size: 14px;
+  letter-spacing: -0.4px;
+}
+
 @media (max-width: $desktop) {
   .heading + .paragraph {
     padding-top: 0;
