Добавляет оставшиеся табы для блока стран
- Для переключения табов использует JS
- Реализует скролл от карточки страны к табу страны с прокруткой
к активному табу

--- a/source/sass/components/_tabs.scss
+++ b/source/sass/components/_tabs.scss
@@ -35,6 +35,10 @@
   color: $tabs-tab-color-selected;
 }
 
+.tabs__tabpanel--active {
+  display: block;
+}
+
 @media (max-width: $desktop) {
   .tabs__container {
     max-width: none;
