Добавляет блок "Цены" для десктопной версии
- Добавляет компонент 'card-price'.

--- a/source/sass/abstracts/_colors.scss
+++ b/source/sass/abstracts/_colors.scss
@@ -4,6 +4,7 @@ $jaffa: hsl(18, 86%, 62%);
 $woodsmoke: hsl(220, 7%, 8%);
 $woodsmoke-half: hsl(220, 7%, 8%, 0.5);
 $woodsmoke-60: hsla(234, 8%, 9%, 0.6);
+$woodsmoke-70: hsl(220, 7%, 8%, 0.7);
 $charad: hsl(234, 18%, 21%);
 $charad-30: hsl(234, 18%, 21%, 0.3);
 $abbey: hsl(228, 3%, 29%);
@@ -36,3 +37,12 @@ $country-card-backdrop-bg-color: $woodsmoke-60;
 $tabs-tab-color: $charad-30;
 $tabs-list-border-color: $charad-30;
 $tabs-tab-color-selected: $bittersweet;
+$prices-contact-color: $woodsmoke;
+$card-price-border-color: $charad-30;
+$card-price-border-color-hover: $bittersweet;
+$card-price-header-color: $woodsmoke-70;
+$card-price-header-color-hover: $bittersweet;
+$card-price-text-color: $charad;
+$card-price-icon-check-fill: $bittersweet;
+$card-price-icon-check-fill-hover: $woodsmoke;
+$card-price-separator: $charad-30;
