Добавляет планшетную и мобильную верстку для блока цен

--- a/source/sass/abstracts/_colors.scss
+++ b/source/sass/abstracts/_colors.scss
@@ -12,6 +12,7 @@ $soft-peach: hsl(0, 27%, 98%);
 $white: hsl(0, 0%, 100%);
 $mischka: hsl(225, 11%, 86%);
 $white-70: hsla(0, 0%, 100%, 0.7);
+$soft-peach: hsl(0, 27%, 98%);
 
 $site-navigation-link: $woodsmoke;
 $site-navigation-link-hover: $bittersweet;
@@ -31,6 +32,7 @@ $button-bg-color: $bittersweet;
 $site-banner-text-dark: $charad;
 $button-transparent-border-color: $white-70;
 $heading-color: $charad;
+$paragraph-color: $charad;
 $separator: $bittersweet;
 $country-card-title-color: $charad;
 $country-card-backdrop-bg-color: $woodsmoke-60;
@@ -46,3 +48,5 @@ $card-price-text-color: $charad;
 $card-price-icon-check-fill: $bittersweet;
 $card-price-icon-check-fill-hover: $woodsmoke;
 $card-price-separator: $charad-30;
+$card-price-separator-hover: $bittersweet;
+$countries-bg-color: $soft-peach;
