--- a/source/sass/components/_paragraph.scss
+++ b/source/sass/components/_paragraph.scss
@@ -2,6 +2,8 @@
   font-size: 16px;
   line-height: 28px;
   letter-spacing: -0.47px;
+  color: $paragraph-color;
+  opacity: 0.7;
 }
 
 .heading + .paragraph {
