--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,7 +19,9 @@
 @import "./components/tabs";
 @import "./components/country";
 @import "./components/feedback";
-@import "./components//card-price";
+@import "./components/card-price";
+@import "./components/feedback-form";
+@import "./components/input";
 
 // Layout
 @import "./layout/main-header";
@@ -28,6 +30,7 @@
 @import "./layout/places-to-visit";
 @import "./layout/countries";
 @import "./layout/prices";
+@import "./layout/section-feedback";
 
 //State
 @import "./state/no-js.scss";
