Завершает стили для блока "Обратная связь"
- Добавляет стили для мобильных.
- Делает линт предыдущих стилей.

--- a/source/sass/abstracts/_colors.scss
+++ b/source/sass/abstracts/_colors.scss
@@ -12,7 +12,6 @@ $soft-peach: hsl(0, 27%, 98%);
 $white: hsl(0, 0%, 100%);
 $mischka: hsl(225, 11%, 86%);
 $white-70: hsla(0, 0%, 100%, 0.7);
-$soft-peach: hsl(0, 27%, 98%);
 
 // Background's fallback colors
 $section-feedback-bg-color: hsl(1, 80%, 69%);
@@ -61,3 +60,4 @@ $feedback-form-color: $woodsmoke;
 $input-border-color: $charad-30;
 $input-color: $woodsmoke;
 $input-invalid-color: $bittersweet;
+$section-feedback-bg-color-mobile: $soft-peach;
