--- a/source/sass/components/_feedback-form.scss
+++ b/source/sass/components/_feedback-form.scss
@@ -2,10 +2,9 @@
   border-radius: 5px;
   padding: 50px;
   background-color: $white;
-  box-shadow: 0px 4px 30px $feedback-form-box-shadow;
+  box-shadow: 0 4px 30px $feedback-form-box-shadow;
   text-align: center;
 }
-
 
 .feedback-form__title {
   margin-top: 0;
@@ -28,4 +27,42 @@
   grid-template-columns: 1fr 1fr;
   column-gap: 19px;
   margin-bottom: 25px;
+}
+
+@media (max-width: $desktop) {
+  .feedback-form {
+    max-width: 658px;
+  }
+
+  .feedback-form__button {
+    min-width: 250px;
+  }
+}
+
+@media (max-width: $tablet) {
+  .feedback-form {
+    border-radius: 0;
+    padding: 0;
+    background-color: transparent;
+    box-shadow: none;
+    text-align: center;
+  }
+
+
+  .feedback-form__title {
+    margin-bottom: 19px;
+  }
+
+  .feedback-form__text {
+    margin-bottom: 20px;
+  }
+
+  .feedback-form__inputs {
+    grid-template-columns: auto;
+    column-gap: normal;
+    row-gap: 20px;
+    justify-content: center;
+    margin-bottom: 20px;
+    min-width: 288px;
+  }
 }
