--- a/source/sass/layout/_section-feedback.scss
+++ b/source/sass/layout/_section-feedback.scss
@@ -1,5 +1,8 @@
-.section-feedback__wrapper {
+.section-feedback {
   margin-top: 140px;
+}
+
+.section-feedback__wrapper {
   display: flex;
   justify-content: flex-end;
   background-image: url("../img/backgrounds/ruby-red-sunset-desktop.jpg"),
@@ -8,13 +11,11 @@
   background-repeat: no-repeat;
   background-position-x: 30px;
 
-
   @media (min-resolution: 2dppx) {
     background-image: url("../img/backgrounds/ruby-red-sunset-desktop@2x.jpg"),
-    linear-gradient(to right, $section-feedback-bg-color 0%, $section-feedback-bg-color 840px, transparent 840px, transparent 100%);
+      linear-gradient(to right, $section-feedback-bg-color 0%, $section-feedback-bg-color 840px, transparent 840px, transparent 100%);
   }
 }
-
 
 .section-feedback__feedback-form {
   margin-top: 70px;
@@ -37,5 +38,13 @@
   .section-feedback__feedback-form {
     margin-top: 70px;
     margin-bottom: 74px;
+  }
+}
+
+@media (max-width: $tablet) {
+  .section-feedback {
+    margin-top: 0;
+    background-image: none;
+    background-color: $section-feedback-bg-color-mobile;
   }
 }
