--- a/source/sass/abstracts/_colors.scss
+++ b/source/sass/abstracts/_colors.scss
@@ -62,3 +62,7 @@ $input-border-color: $charad-30;
 $input-color: $woodsmoke;
 $input-invalid-color: $bittersweet;
 $section-feedback-bg-color-mobile: $soft-peach;
+$popup-form-title-color: $abbey;
+$modal-success-text-color: $abbey;
+$modal-popup-form-bg-color: $soft-peach;
+$modal-result-bg-color: $soft-peach;
