--- a/source/sass/layout/_main-footer.scss
+++ b/source/sass/layout/_main-footer.scss
@@ -1,4 +1,5 @@
 .main-footer {
+  margin-top: 80px;
   padding-bottom: 72px;
 }
 
@@ -190,6 +191,7 @@
   .main-footer__cell--corp-trips {
     .main-footer__title {
       white-space: nowrap;
+      max-width: 288px;
     }
   }
 }
