--- a/source/sass/components/_country-card.scss
+++ b/source/sass/components/_country-card.scss
@@ -45,6 +45,7 @@
   line-height: 29px;
   letter-spacing: -0.46px;
   color: $country-card-title-color;
+  text-align: center;
 }
 
 .country-card__button {
