--- a/source/sass/components/_feedback-form.scss
+++ b/source/sass/components/_feedback-form.scss
@@ -1,6 +1,7 @@
 .feedback-form {
   border-radius: 5px;
   padding: 50px;
+  max-width: 557px;
   background-color: $white;
   box-shadow: 0 4px 30px $feedback-form-box-shadow;
   text-align: center;
