--- a/source/sass/base/_base.scss
+++ b/source/sass/base/_base.scss
@@ -13,6 +13,11 @@ a {
   min-height: 100%;
 }
 
+.page-body--lock {
+  overflow-y: scroll;
+  position:fixed;
+}
+
 .container {
   max-width: 1170px;
   padding: 0 30px;
