--- a/source/sass/components/_input.scss
+++ b/source/sass/components/_input.scss
@@ -50,6 +50,7 @@
   width: 269px;
   font-size: 14px;
   line-height: 17px;
+  appearance: none;
 
   &::placeholder {
     color: $input-color;
@@ -76,7 +77,7 @@
   color: $input-invalid-color;
 }
 
-@media (max-width: $desktop) {
+@media (max-width: $tablet) {
   .input__field {
     width: 288px;
   }
