Добавляет оптимизированные картинки. Делает критерии
- Добавляет в разметку недостающие атрибуты доступности.
- Изменяет картинки через squoosh.
- Изменяет файл автоматизации под  единый стиль.
- Делает зависимые пакеты одной версии.
- Линтит стили.

--- a/source/sass/abstracts/_colors.scss
+++ b/source/sass/abstracts/_colors.scss
@@ -1,25 +1,25 @@
 $black: #000000;
-$bittersweet: #FE7865;
-$jaffa: #F17D4B;
+$bittersweet: #fe7865;
+$jaffa: #f17d4b;
 $woodsmoke: #141517;
 $woodsmoke-half: #14151780;
 $woodsmoke-60: #14151799;
 $woodsmoke-70: #141517b3;
-$charad: #2C2E3F;
-$charad-30: #2C2E3F4d;
-$abbey: #48494D;
-$soft-peach: #FBF8F8;
-$white: #FFFFFF;
-$mischka: #D7D9DF;
-$white-70: #FFFFFFB3;
+$charad: #2c2e3f;
+$charad-30: #2c2e3f4d;
+$abbey: #48494d;
+$soft-peach: #fbf8f8;
+$white: #ffffff;
+$mischka: #d7d9df;
+$white-70: #ffffffb3;
 
 // Background's fallback colors
-$site-banner-bg-color: #5583A9;
-$section-feedback-bg-color: #EF7371;
+$site-banner-bg-color: #5583a9;
+$section-feedback-bg-color: #ef7371;
 $modal-window-buy-tour: #518ca9;
 
 // Box shadows
-$feedback-form-box-shadow: #2936421A;
+$feedback-form-box-shadow: #2936421a;
 
 // Purpose
 $site-navigation-link: $woodsmoke;
