--- a/source/sass/components/_button.scss
+++ b/source/sass/components/_button.scss
@@ -11,6 +11,7 @@
   line-height: 15px;
   letter-spacing: 2px;
   text-transform: uppercase;
+  text-decoration: none;
   color: $white;
   cursor: pointer;
 }
