--- a/source/sass/components/_site-navigation.scss
+++ b/source/sass/components/_site-navigation.scss
@@ -14,6 +14,7 @@
 .site-navigation__link {
   font-size: 14px;
   color: $site-navigation-link;
+  text-decoration: none;
 
   &:hover {
     color: $site-navigation-link-hover;
